testsuite/tests/generic_interfaces/private_implements/test.out
== foo.lkt ==
foo.lkt:17:5: error: Implementation of method Interface.method in class BarNode needs to be public
17 |     fun prop(): Int implements Interface.method = 1
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
